# kmscube-rs

./: Cargo.toml
src/: cube_smooth.rs  egl.rs  es_matrix.rs  main.rs
sys/: Cargo.toml  build.rs
sys/src/: lib.rs
