[package]
name = "sys"
version = "0.1.0"
authors = ["kosyak <vadim@kosov.eu>"]
edition = "2018"
build = "build.rs"

[dependencies]
gbm = { git = "https://github.com/kosyak/gbm.rs", default-features = false, features = ["drm-support", "import-egl", "gen"] }
drm = { git = "https://github.com/kosyak/drm-rs", branch = "master" }

[build-dependencies]
gl_generator = "*"
